--- a/index.html
+++ b/index.html
@@ -13,6 +13,84 @@
     <link rel="icon" href="./img/rocket.png" />
 
     <title>VCard</title>
+
+    <script
+      src="https://kit.fontawesome.com/0246849abf.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <section>
+      <div class="grid1">
+        <img
+          src="./img/avatar.jpeg"
+          alt="Amaury Henrottay"
+          title="Amaury Henrottay"
+        />
+      </div>
+      <div class="grid2">
+        <h1><span>I'm</span> Amaury Henrottay</h1>
+        <p>Web Developer & designer</p>
+      </div>
+      <div class="grid3">
+        <ul class="cv-list">
+          <li>
+            <h4>Address</h4>
+            <p>Rue des Augustins n°14, 4000 Liège</p>
+          </li>
+          <li>
+            <h4>Phone</h4>
+            <p>+32 499 32 xx xx</p>
+          </li>
+          <li>
+            <h4>Email</h4>
+            <p>amaury.henrottay@gmail.com</p>
+          </li>
+          <li>
+            <h4>Website</h4>
+            <p>
+              <a
+                href="https://amauryh24.github.io/"
+                title="compte Github"
+                target="_blank"
+              >
+                amaury2409.github.io
+              </a>
+            </p>
+          </li>
+        </ul>
+      </div>
+      <div class="grid4">
+        <ul class="media">
+          <li>
+            <a
+              target="_blank"
+              href="https://github.com/Amauryh24"
+              title="Compte github"
+            >
+              <i class="fa fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://linkedin.com/in/amauryhenrottay"
+              title="Compte linkedin"
+            >
+              <i class="fab fa-linkedin"></i
+            ></a>
+          </li>
+
+          <li>
+            <a
+              target="_blank"
+              href="https://www.freecodecamp.org/amauryh24"
+              title="Compte freecodecamp"
+              ><i class="fab fa-free-code-camp"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </body>
 </html>
