--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="grid2">
         <h1><span>I'm</span> Amaury Henrottay</h1>
-        <p>Web Developer & designer</p>
+        <p>Web Developer & Designer</p>
       </div>
       <div class="grid3">
         <ul class="cv-list">
